@startuml DijkstraClassDiagram
skinparam classAttributeIconSize 0
skinparam backgroundColor #FAFAFA
skinparam class {
    BackgroundColor #E3F2FD
    BorderColor #1565C0
    ArrowColor #1565C0
    FontSize 12
}
skinparam interface {
    BackgroundColor #E8F5E9
    BorderColor #2E7D32
}

title Dijkstra Route Planner — Full Class Hierarchy & Dependencies\nCairo Transportation Network (CSE112)

package "Core Routing" {
    interface IDijkstraRoutePlanner {
        + FindShortestPath(graph: Graph, fromNodeId: string, toNodeId: string) : ShortestPathResultDto
        --
        + Validate(graph, from, to) : bool
        + BuildInitialDistanceMap(graph, from) : Dictionary<string, double>
    }

    class DijkstraRoutePlanner {
        - metrics: AlgorithmExecutionMetrics
        + FindShortestPath(graph, from, to) : ShortestPathResultDto
        - BuildResult(graph, distances, prevNode, prevRoad, from, to) : ShortestPathResultDto
        - MapNode(node: GraphNode) : ShortestPathNodeDto
        - MapRoad(edge: GraphEdge) : ShortestPathRoadDto
        - ValidateNodes(graph, from, to) : bool
    }
}

package "Metrics & Instrumentation" {
    class AlgorithmExecutionMetrics {
        - nodesDiscovered: int
        - nodesExpanded: int
        - stopwatch: Stopwatch
        + MarkDiscovered(nodeId: string) : void
        + MarkExpanded() : void
        + GetElapsedMs() : long
        + GetNodesDiscovered() : int
        + GetNodesExpanded() : int
    }
}

package "Graph Data Structures" {
    class Graph {
        + Nodes: List<GraphNode>
        + NodeIndex: Dictionary<string, GraphNode>
        + EdgeIndex: Dictionary<long, GraphEdge>
        + AdjacencyList: Dictionary<string, List<long>>
        --
        + GetNode(id) : GraphNode
        + GetEdge(id) : GraphEdge
        + GetNeighbors(nodeId) : List<long>
    }

    class GraphNode {
        + Id: string
        + Name: string
        + Type: NodeType
        + Category: string
        + X: double?
        + Y: double?
        + Population: int
        + IsCritical: bool
    }

    class GraphEdge {
        + Id: long
        + FromNodeId: string
        + ToNodeId: string
        + Distance: double
        + Capacity: int
        + Condition: int
        + IsExisting: bool
        + ConstructionCost: double
    }
}

package "DTOs" {
    class ShortestPathResultDto {
        + FromNodeId: string
        + ToNodeId: string
        + Found: bool
        + TotalDistance: double
        + PathNodes: List<ShortestPathNodeDto>
        + PathRoads: List<ShortestPathRoadDto>
    }

    class ShortestPathNodeDto {
        + Id: string
        + Name: string
        + Latitude: double
        + Longitude: double
    }

    class ShortestPathRoadDto {
        + Id: long
        + FromLocation: string
        + ToLocation: string
        + Distance: double
        + Capacity: int
    }
}

DijkstraRoutePlanner ..|> IDijkstraRoutePlanner : implements
DijkstraRoutePlanner --> AlgorithmExecutionMetrics : injects/uses
DijkstraRoutePlanner --> Graph : reads
DijkstraRoutePlanner --> ShortestPathResultDto : produces

Graph "1" *-- "many" GraphNode : contains
Graph "1" *-- "many" GraphEdge : contains

ShortestPathResultDto "1" o-- "many" ShortestPathNodeDto : contains
ShortestPathResultDto "1" o-- "many" ShortestPathRoadDto : contains

note right of DijkstraRoutePlanner
  **Local Variables (FindShortestPath):**
  • distances : Dictionary<string, double>     // O(V)
  • visited   : HashSet<string>                // O(V)
  • previousNode : Dictionary<string, string>  // O(V)
  • previousRoad : Dictionary<string, long>    // O(V)
  • queue : PriorityQueue<string, double>      // O(E) max
  • metrics : AlgorithmExecutionMetrics        // O(1)
  
  **Space Complexity:** O(V + E) total
end note

note left of Graph
  **GraphService creates:**
  • NodeIndex: O(1) node lookup by ID
  • EdgeIndex: O(1) edge lookup by ID
  • AdjacencyList: O(1) neighbor enumeration
  **Total graph build time:** O(V + E)
end note

@enduml
